# schwab-downloader

./: .checkmake.ini  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/schwab_downloader/: __main__.py
src/schwab_downloader/cli/: __init__.py
