[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schwab-downloader"
dynamic = ["version"]
description = 'Logs into a schwab.com account and downloads data (statements, checks, etc) as PDF'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["schwab", "data", "statements", "checks", "download", "pdf"]
authors = [
  { name = "David C Wang", email = "dcwangmit01@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "docopt>=0.6.2",
  "playwright>=1.54.0",
  "playwright-stealth>=2.0.0",
  "ipdb>=0.13.13",
  "python-dotenv>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/dcwangmit01/schwab-downloader#readme"
Issues = "https://github.com/dcwangmit01/schwab-downloader/issues"
Source = "https://github.com/dcwangmit01/schwab-downloader"

[project.scripts]
schwab-downloader = "schwab_downloader.cli:schwab_downloader"

[tool.hatch.version]
path = "src/schwab_downloader/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=25.1.0",
  "mypy>=1.17.1",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/schwab_downloader tests}"
style = [
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py313"]
line-length = 120
skip-string-normalization = true



[tool.coverage.run]
source_pkgs = ["schwab_downloader", "tests"]
branch = true
parallel = true
omit = [
  "src/schwab_downloader/__about__.py",
]

[tool.coverage.paths]
schwab_downloader = ["src/schwab_downloader", "*/schwab-downloader/src/schwab_downloader"]
tests = ["tests", "*/schwab-downloader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.4",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]
